Add best profession endpoint
